1.送礼物动画 2.消息发送,展示 3.分享,更多按钮实现

--- a/GYJTV/GYJTV/Classes/Live/View/ChatView/ChatToolsView.xib
+++ b/GYJTV/GYJTV/Classes/Live/View/ChatView/ChatToolsView.xib
@@ -17,6 +17,7 @@
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="愉快地和主播聊一聊吧" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N8G-rj-830">
                     <rect key="frame" x="5" y="5" width="300" height="34"/>
+                    <color key="backgroundColor" red="0.94117647058823528" green="0.94117647058823528" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
