--- a/GYJTV/GYJTV/Classes/Live/View/ChatContentVIew/ChatContentView.xib
+++ b/GYJTV/GYJTV/Classes/Live/View/ChatContentVIew/ChatContentView.xib
@@ -20,7 +20,7 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="cTQ-HX-bo8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="DBG-2w-fgG"/>
                 <constraint firstAttribute="bottom" secondItem="cTQ-HX-bo8" secondAttribute="bottom" id="WGM-Ye-R5U"/>
